// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphql-js snapshot check to ensure test stability @defer crossselection 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "gender": "male",
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "gender": "male",
          },
          "path": [
            "person",
          ],
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer if 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "birth_year": "19BBY",
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "gender": "male",
          },
          "path": [
            "person",
          ],
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer label simple 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "gender": "male",
          },
          "label": "INLINE",
          "path": [
            "person",
          ],
        },
        {
          "data": {
            "birth_year": "19BBY",
          },
          "path": [
            "person",
          ],
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer multiple fragments 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "gender": "male",
          },
          "path": [
            "person",
          ],
        },
        {
          "data": {
            "birth_year": "19BBY",
          },
          "path": [
            "person",
          ],
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer nested 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": true,
      "incremental": [
        {
          "data": {
            "birth_year": "19BBY",
          },
          "path": [
            "person",
          ],
        },
      ],
    },
    {
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "films": [
              {
                "title": "A New Hope",
              },
              {
                "title": "The Empire Strikes Back",
              },
              {
                "title": "Return of the Jedi",
              },
              {
                "title": "Revenge of the Sith",
              },
            ],
          },
          "path": [
            "person",
          ],
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer on fragment 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "birth_year": "19BBY",
            "gender": "male",
          },
          "path": [
            "person",
          ],
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer on inline fragment 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "birth_year": "19BBY",
            "gender": "male",
          },
          "path": [
            "person",
          ],
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer on list 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "films": [
          {},
          {},
          {},
          {},
        ],
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "title": "A New Hope",
          },
          "path": [
            "person",
            "films",
            0,
          ],
        },
        {
          "data": {
            "title": "The Empire Strikes Back",
          },
          "path": [
            "person",
            "films",
            1,
          ],
        },
        {
          "data": {
            "title": "Return of the Jedi",
          },
          "path": [
            "person",
            "films",
            2,
          ],
        },
        {
          "data": {
            "title": "Revenge of the Sith",
          },
          "path": [
            "person",
            "films",
            3,
          ],
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer on query with union 1`] = `
{
  "initialResult": {
    "data": {
      "search": [
        {
          "__typename": "Person",
        },
        {
          "__typename": "Person",
        },
        {
          "__typename": "Planet",
          "name": "Felucia",
        },
        {
          "__typename": "Planet",
          "name": "Sullust",
        },
        {
          "__typename": "Species",
          "name": "Sullustan",
        },
        {
          "__typename": "Transport",
          "name": "Raddaugh Gnasp fluttercraft",
        },
        {
          "__typename": "Vehicle",
          "name": "Raddaugh Gnasp fluttercraft",
        },
      ],
    },
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "name": "Luke Skywalker",
          },
          "path": [
            "search",
            0,
          ],
        },
        {
          "data": {
            "name": "Luminara Unduli",
          },
          "path": [
            "search",
            1,
          ],
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer overlapping fragment 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "gender": "male",
          },
          "path": [
            "person",
          ],
        },
        {
          "data": {
            "birth_year": "19BBY",
            "gender": "male",
          },
          "path": [
            "person",
          ],
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @defer skip/include 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": false,
      "incremental": [
        {
          "data": {},
          "path": [
            "person",
          ],
        },
        {
          "data": {},
          "path": [
            "person",
          ],
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @stream basic 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "films": [],
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "A New Hope",
            },
          ],
          "path": [
            "person",
            "films",
            0,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "The Empire Strikes Back",
            },
          ],
          "path": [
            "person",
            "films",
            1,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "Return of the Jedi",
            },
          ],
          "path": [
            "person",
            "films",
            2,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "Revenge of the Sith",
            },
          ],
          "path": [
            "person",
            "films",
            3,
          ],
        },
      ],
    },
    {
      "hasNext": false,
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @stream if 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "films": [],
        "name": "Luke Skywalker",
        "starships": [
          {
            "name": "X-wing",
          },
          {
            "name": "Imperial shuttle",
          },
        ],
      },
    },
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "A New Hope",
            },
          ],
          "path": [
            "person",
            "films",
            0,
          ],
        },
        {
          "items": [
            {
              "title": "The Empire Strikes Back",
            },
          ],
          "path": [
            "person",
            "films",
            1,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "Return of the Jedi",
            },
          ],
          "path": [
            "person",
            "films",
            2,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "Revenge of the Sith",
            },
          ],
          "path": [
            "person",
            "films",
            3,
          ],
        },
      ],
    },
    {
      "hasNext": false,
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @stream initialCount 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "films": [
          {
            "title": "A New Hope",
          },
          {
            "title": "The Empire Strikes Back",
          },
        ],
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "Return of the Jedi",
            },
          ],
          "label": "FILMS",
          "path": [
            "person",
            "films",
            2,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "Revenge of the Sith",
            },
          ],
          "label": "FILMS",
          "path": [
            "person",
            "films",
            3,
          ],
        },
      ],
    },
    {
      "hasNext": false,
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @stream inside @defer 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": true,
      "incremental": [
        {
          "data": {
            "birth_year": "19BBY",
          },
          "path": [
            "person",
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "data": {
            "films": [],
          },
          "path": [
            "person",
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "A New Hope",
            },
          ],
          "path": [
            "person",
            "films",
            0,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "The Empire Strikes Back",
            },
          ],
          "path": [
            "person",
            "films",
            1,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "Return of the Jedi",
            },
          ],
          "path": [
            "person",
            "films",
            2,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "Revenge of the Sith",
            },
          ],
          "path": [
            "person",
            "films",
            3,
          ],
        },
      ],
    },
    {
      "hasNext": false,
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @stream label 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "films": [],
        "name": "Luke Skywalker",
        "starships": [],
      },
    },
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "A New Hope",
            },
          ],
          "label": "FILMS",
          "path": [
            "person",
            "films",
            0,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "name": "X-wing",
            },
          ],
          "label": "STARSHIPS",
          "path": [
            "person",
            "starships",
            0,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "The Empire Strikes Back",
            },
          ],
          "label": "FILMS",
          "path": [
            "person",
            "films",
            1,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "name": "Imperial shuttle",
            },
          ],
          "label": "STARSHIPS",
          "path": [
            "person",
            "starships",
            1,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "Return of the Jedi",
            },
          ],
          "label": "FILMS",
          "path": [
            "person",
            "films",
            2,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "Revenge of the Sith",
            },
          ],
          "label": "FILMS",
          "path": [
            "person",
            "films",
            3,
          ],
        },
      ],
    },
    {
      "hasNext": false,
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @stream multiple 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "films": [],
        "name": "Luke Skywalker",
        "starships": [],
      },
    },
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "A New Hope",
            },
          ],
          "path": [
            "person",
            "films",
            0,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "name": "X-wing",
            },
          ],
          "path": [
            "person",
            "starships",
            0,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "The Empire Strikes Back",
            },
          ],
          "path": [
            "person",
            "films",
            1,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "name": "Imperial shuttle",
            },
          ],
          "path": [
            "person",
            "starships",
            1,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "Return of the Jedi",
            },
          ],
          "path": [
            "person",
            "films",
            2,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "title": "Revenge of the Sith",
            },
          ],
          "path": [
            "person",
            "films",
            3,
          ],
        },
      ],
    },
    {
      "hasNext": false,
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @stream nested 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "films": [],
        "name": "Luke Skywalker",
      },
    },
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "planets": [],
              "title": "A New Hope",
            },
          ],
          "path": [
            "person",
            "films",
            0,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            0,
            "planets",
            0,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            0,
            "planets",
            1,
          ],
        },
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            0,
            "planets",
            2,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "planets": [],
              "title": "The Empire Strikes Back",
            },
          ],
          "path": [
            "person",
            "films",
            1,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            1,
            "planets",
            0,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            1,
            "planets",
            1,
          ],
        },
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            1,
            "planets",
            2,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            1,
            "planets",
            3,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "planets": [],
              "title": "Return of the Jedi",
            },
          ],
          "path": [
            "person",
            "films",
            2,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            2,
            "planets",
            0,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            2,
            "planets",
            1,
          ],
        },
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            2,
            "planets",
            2,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            2,
            "planets",
            3,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            2,
            "planets",
            4,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {
              "planets": [],
              "title": "Revenge of the Sith",
            },
          ],
          "path": [
            "person",
            "films",
            3,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            3,
            "planets",
            0,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            3,
            "planets",
            1,
          ],
        },
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            3,
            "planets",
            2,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            3,
            "planets",
            3,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            3,
            "planets",
            4,
          ],
        },
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            3,
            "planets",
            5,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            3,
            "planets",
            6,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            3,
            "planets",
            7,
          ],
        },
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            3,
            "planets",
            8,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            3,
            "planets",
            9,
          ],
        },
      ],
    },
    {
      "hasNext": true,
      "incremental": [
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            3,
            "planets",
            10,
          ],
        },
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            3,
            "planets",
            11,
          ],
        },
      ],
    },
    {
      "hasNext": false,
      "incremental": [
        {
          "items": [
            {},
          ],
          "path": [
            "person",
            "films",
            3,
            "planets",
            12,
          ],
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability @stream/defer errors 1`] = `
{
  "initialResult": {
    "data": {
      "person": {
        "bubblingListError": null,
        "name": "Luke Skywalker",
      },
    },
    "errors": [
      [GraphQLError: Bubbling in list!],
    ],
    "hasNext": true,
  },
  "subsequentResults": [
    {
      "hasNext": false,
      "incremental": [
        {
          "data": {
            "bubblingError": null,
          },
          "errors": [
            [GraphQLError: Bubbling!],
          ],
          "path": [
            "person",
          ],
        },
      ],
    },
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability benchmark kitchen-sink query 1`] = `
{
  "data": {
    "empireHero": {
      "birth_year": "19BBY",
      "gender": "male",
      "height": 172,
      "mass": 77,
      "name": "Luke Skywalker",
      "starships": [
        {
          "name": "X-wing",
        },
        {
          "name": "Imperial shuttle",
        },
      ],
    },
    "jediHero": {
      "birth_year": "41.9BBY",
      "gender": "male",
      "name": "Darth Vader",
      "starships": [
        {
          "name": "TIE Advanced x1",
        },
      ],
    },
  },
}
`;
